# indeed-scraper

./: 1-jobs.csv  developer.csv  developer_casablanca.csv  file.html  get_direct_text_only.py  h.html  l_rabat.csv  main.py  main_.py  modular.py  myhtml.html  pyproject.toml  requirements.txt  scraper_gui.py  tempCodeRunnerFile.py  test_requests_html.py  test_tkinter.py  web developer.csv  web developer_rabat.csv
drafting/: drafting_playwright.py  drafting_requests_html.py  miles_km_converter.py  tempCodeRunnerFile.py
indeed_apply_bot/: main.py
modules/: applier.py  gui.py  lib.py  scraper.py
scraped_data/: developer_rabat.csv  developer_tanger.csv
scrapy_indeed/: scrapy.cfg
scrapy_indeed/scrapy_indeed/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_indeed/scrapy_indeed/spiders/: indeed_spider.py
src/: lib.py  main.json  main.py  main_.py  myhtml.py  scrape_indeed.py  tempCodeRunnerFile.py  timeparse.py
