[tool.poetry]
name = "indeed-apply-bot"
version = "0.1.0"
description = ""
authors = ["Adil_Majhoul <itsadilhadid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
requests = "^2.32.3"
lxml = "^5.2.2"
bs4 = "^0.0.2"
selectolax = "^0.3.21"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



